@@ -23,3 +23,4 @@ Tom Hull - Similar work to CSCOPE_EDITOR and friends
 Donald Slutz - Various fixes
 OGAWA Hirofumi - line mode fixes
 Garret Hade - Various ocs fixes
+Nick Dixon - Improvement in key handling
